--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div id="center">
+      <div id="leftInfo">Left Side</div>
+      <div id="mainInfo">Main Information</div>
+      <div id="rightInfo">Right Side</div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
