cleaning css grid layout

--- a/index.html
+++ b/index.html
@@ -7,11 +7,84 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="center">
-      <div id="leftInfo">Left Side</div>
-      <div id="mainInfo">Main Information</div>
-      <div id="rightInfo">Right Side</div>
-    </div>
+    <header>Header</header>
+    <main id="center" class="web-grid">
+      <div id="leftInfo">
+        <h3>Contact Details</h3>
+        <ul>
+          <li>Email:</li>
+          <li>LinkedIn:</li>
+        </ul>
+      </div>
+      <div id="mainInfo">
+        <div id="summaryOfMe">
+          <div class="pictureOfMe">
+            <img src="jobImage.jpg" class="resume" />
+          </div>
+          <div class="info">
+            <h3>Summary of Me</h3>
+            <p>
+              Hello! My name is Ravindu Rajatheva and I am a frontend developer.
+              I am eager to work within the technology sector in Finland. I
+              began my coding journey when I enrolled in one specific course
+              called programming in C#. This was during my bachelor's degree in
+              Business Administration from Oulu University of Applied Sciences.
+              Hungry to learn more I applied to a master's degree in Computer
+              Science at Aalto University.
+            </p>
+            <p>
+              During my time at university I was able to land several roles.
+              These include junior researcher position all the way up to working
+              as a frontend developer in Nokia, Espoo. In my career I have
+              learned more in depth about frontend development and how much I
+              have still left to learn.
+            </p>
+          </div>
+          <div class="final">
+            <h3>Why should you hire me?</h3>
+            <p>
+              My greatest strengths that I can offer to any company is that I am
+              someone that is good at supporting others to reach a common goal.
+              I make sure to spend time and ask questions to understand the
+              business case or project I am involved in. Lastly, I am quick to
+              absorb new information so that I am able to complete tasks and
+              fulfill my duties. Below are a list of accomplistments I am proud
+              to share.
+            </p>
+            <ul>
+              <li>
+                Designed and developed frontend features that enhanced user
+                experience and exceeded stakeholder/client requirements.
+              </li>
+              <li>
+                Made a major contribution in replacing manual test cases with
+                automated testing scripts using Microsoft Playwright. This
+                switch to test automation led to a reduction of nearly 90% in
+                testing duration.
+              </li>
+              <li>
+                Resolved an IT infrastructure limitation that blocked automated
+                tests from executing by configuring Playwright testing
+                parameters
+              </li>
+              <li>
+                Used HTML canvas and RGB mapping for visualizing large datasets
+                on webpages
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div id="rightInfo">
+        <h3>Work Experience</h3>
+        <ol>
+          <li>Frontend Developer (Product Specialist)</li>
+          <li>Thesis Worker</li>
+          <li>Junior Research Assistant</li>
+        </ol>
+      </div>
+    </main>
+    <footer id="footerInfo">Footer</footer>
     <script src="main.js"></script>
   </body>
 </html>
