restructured for responsive design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <header>Header</header>
+
+    <input type="checkbox" class="burger-menu" />
+    <label for="burger-menu" class="burger-menu-button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+
     <main id="center" class="web-grid">
       <div id="leftInfo">
         <h3>Contact Details</h3>
@@ -85,6 +93,7 @@
       </div>
     </main>
     <footer id="footerInfo">Footer</footer>
+    <!-- <div class="web-grid"></div> -->
     <script src="main.js"></script>
   </body>
 </html>
