--- a/index.html
+++ b/index.html
@@ -7,21 +7,29 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>Header</header>
+    <!-- <header>Header</header> -->
 
-    <input type="checkbox" class="burger-menu" />
+    <input type="checkbox" id="burger-menu" class="burger-menu"/>
     <label for="burger-menu" class="burger-menu-button">
       <span></span>
       <span></span>
       <span></span>
     </label>
 
+    <nav class="hidden-menu">
+      <ul>
+        <li><a href=".">Home</a></li>
+        <!-- <li><a href="">Projects</a></li> -->
+        <li><a href="https://www.linkedin.com/in/ravindu-rajatheva-691a67140/">LinkedIn</a></li>
+      </ul>
+    </nav>
+
     <main id="center" class="web-grid">
       <div id="leftInfo">
         <h3>Contact Details</h3>
         <ul>
-          <li>Email:</li>
-          <li>LinkedIn:</li>
+          <li><address><a href="mailto:forwardingemail">Email</a></address></li>
+          <li><a href="https://www.linkedin.com/in/ravindu-rajatheva-691a67140/">LinkedIn</a></li>
         </ul>
       </div>
       <div id="mainInfo">
