--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <main id="center" class="web-grid">
-      <div id="leftInfo">
+      <div id="leftInfo" class="contact-details">
         <h3>Contact Details</h3>
         <ul>
           <li><address><a href="mailto:forwardingemail">Email</a></address></li>
@@ -34,7 +34,7 @@
       </div>
       <div id="mainInfo">
         <div id="summaryOfMe">
-          <div class="pictureOfMe">
+          <div class="pictureOfMe smile">
             <img src="jobImage.jpg" class="resume" />
           </div>
           <div class="info">
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div id="rightInfo">
+      <div id="rightInfo" class="tidbits">
         <h3>Work Experience</h3>
         <ol>
           <li>Frontend Developer (Product Specialist)</li>
