add forward email add menu clean up add animations

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <main id="center" class="web-grid">
       <div id="leftInfo" class="contact-details">
-        <h3>Contact Details</h3>
+        <h3><span>C</span><span>o</span><span>n</span><span>t</span><span>a</span><span>c</span><span>t</span> Details</h3>
         <ul>
-          <li><address><a href="mailto:forwardingemail">Email</a></address></li>
+          <li><a href="mailto:ravindu.developer@gmail.com">Email</a></li>
           <li><a href="https://www.linkedin.com/in/ravindu-rajatheva-691a67140/">LinkedIn</a></li>
         </ul>
       </div>
