cleaned summary text

--- a/index.html
+++ b/index.html
@@ -40,43 +40,41 @@
           <div class="info">
             <h3>Summary of Me</h3>
             <p>
-              Hello! My name is Ravindu Rajatheva and I am a frontend developer.
-              I am eager to work within the technology sector in Finland. I
-              began my coding journey when I enrolled in one specific course
-              called programming in C#. This was during my bachelor's degree in
-              Business Administration from Oulu University of Applied Sciences.
-              Hungry to learn more I applied to a master's degree in Computer
-              Science at Aalto University.
+              Hello! My name is Ravindu Rajatheva, and I am a frontend developer.
+              I am eager to work in the technology sector in Finland. I
+              began my coding journey when I enrolled in a course
+              called programming in C# during my bachelor's degree in
+              Business Administration at Oulu University of Applied Sciences.
+              Hungry to learn more, I applied and got accepted into a master's
+              degree programme in Computer Science at Aalto University.
             </p>
             <p>
-              During my time at university I was able to land several roles.
-              These include junior researcher position all the way up to working
-              as a frontend developer in Nokia, Espoo. In my career I have
-              learned more in depth about frontend development and how much I
-              have still left to learn.
+              During my time at university, I was able to land several roles,
+              ranging from a junior researcher position all the way up to working
+              as a frontend developer at Nokia, Espoo. In my career, I have gained
+              a deeper understanding of frontend development and realized how much
+              there is still left to learn.
             </p>
           </div>
           <div class="final">
             <h3>Why should you hire me?</h3>
             <p>
-              My greatest strengths that I can offer to any company is that I am
-              someone that is good at supporting others to reach a common goal.
-              I make sure to spend time and ask questions to understand the
-              business case or project I am involved in. Lastly, I am quick to
-              absorb new information so that I am able to complete tasks and
-              fulfill my duties. Below are a list of accomplistments I am proud
-              to share.
+              My greatest strength that I can offer to any company is my ability
+              to support others to reach a common goal. I make sure to spend time
+              asking the right questions to comprehend the business case or project
+              I am involved in. Lastly, I am quick to absorb new information so
+              that I am able to complete tasks and fulfill my duties. Below is
+              a list of accomplishments I am proud to share.
             </p>
             <ul>
               <li>
                 Designed and developed frontend features that enhanced user
-                experience and exceeded stakeholder/client requirements.
+                experience and exceeded stakeholder and client requirements.
               </li>
               <li>
-                Made a major contribution in replacing manual test cases with
+                Made a major contribution to replacing manual test cases with
                 automated testing scripts using Microsoft Playwright. This
-                switch to test automation led to a reduction of nearly 90% in
-                testing duration.
+                switch to test automation reduced testing duration by almost 90%.
               </li>
               <li>
                 Resolved an IT infrastructure limitation that blocked automated
@@ -84,7 +82,7 @@
                 parameters
               </li>
               <li>
-                Used HTML canvas and RGB mapping for visualizing large datasets
+                Used HTML Canvas and RGB mapping to visualize large datasets
                 on webpages
               </li>
             </ul>
